--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>jacadcript calculator</title>
+</head>
+<body>
+    <mai class="calculator">
+        <div class="top">
+            <span class="unit">deg</span>
+           <section class="screen">
+            <div class="input"></div>
+            <div class="result"></div>
+         </section>
+        </div>
+         <div class="bottom ">
+             <section class="key"> 
+                <div class="column">
+                    <span data-key="7">7</span>
+                    <span data-key="4">4</span>
+                    <span data-key="1">1</span>
+                    <span data-key=".">.</span>
+                </div>
+                <div class="column">
+                    <span data-key=""></span>
+                    <span data-key=""></span>
+                    <span data-key=""></span>
+                    <span data-key=""></span>
+                </div>
+                <div class="column">
+                    <div></div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="operators">
+                    <span class="delete">>del</span>
+                    <span data-key="/"></span>
+                    <span data-key="x"></span>
+                    <span data-key="-"></span>
+                    <span data-key="+"></span>
+                </div>
+              </section>
 
+         </div>
+    </main>
+</body>
+</html>
