--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jacadcript calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <mai class="calculator">
@@ -23,27 +24,28 @@
                     <span data-key=".">.</span>
                 </div>
                 <div class="column">
-                    <span data-key=""></span>
-                    <span data-key=""></span>
-                    <span data-key=""></span>
-                    <span data-key=""></span>
+                    <span data-key="8">8</span>
+                    <span data-key="5">5</span>
+                    <span data-key="2">2</span>
+                    <span data-key="0">0</span>
                 </div>
                 <div class="column">
-                    <div></div>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span data-key=""></span>
+                    <span data-key="9">9</span>
+                    <span data-key="6">6</span>
+                    <span data-key="3">3</span>
+                    <span class="equal-to" data-key="=">=</span>
                 </div>
                 <div class="operators">
                     <span class="delete">>del</span>
-                    <span data-key="/"></span>
-                    <span data-key="x"></span>
-                    <span data-key="-"></span>
-                    <span data-key="+"></span>
+                    <span data-key="/">/</span>
+                    <span data-key="x">x</span>
+                    <span data-key="-">-</span>
+                    <span data-key="+">+</span>
                 </div>
               </section>
-
          </div>
+         <script src="app.js"></script>
     </main>
 </body>
 </html>
