--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <mai class="calculator">
+    
+    <main class="calculator">
+        
         <div class="top">
+
             <span class="unit">deg</span>
            <section class="screen">
             <div class="input"></div>
@@ -16,32 +19,37 @@
          </section>
         </div>
          <div class="bottom">
-             <section class="key"> 
+
+             <section class="keys">
+
                 <div class="column">
                     <span data-key="7">7</span>
                     <span data-key="4">4</span>
                     <span data-key="1">1</span>
                     <span data-key=".">.</span>
                 </div>
+
                 <div class="column">
                     <span data-key="8">8</span>
                     <span data-key="5">5</span>
                     <span data-key="2">2</span>
                     <span data-key="0">0</span>
                 </div>
+
                 <div class="column">
                     <span data-key="9">9</span>
                     <span data-key="6">6</span>
                     <span data-key="3">3</span>
                     <span class="equal-to" data-key="=">=</span>
                 </div>
-                <div class="operators">
+             </section>
+
+                <section class="operators">
                     <span class="delete">>del</span>
                     <span data-key="/">/</span>
                     <span data-key="x">x</span>
                     <span data-key="-">-</span>
                     <span data-key="+">+</span>
-                </div>
               </section>
          </div>
          <script src="app.js"></script>
