--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
     
     <main class="calculator">
-        
-        <div class="top">
-
-            <span class="unit">deg</span>
+        <div class="tops">
+           <span class="unit">deg</span>
            <section class="screen">
             <div class="input"></div>
             <div class="result"></div>
