--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>jacadcript calculator</title>
+    <title>Javascript calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <main class="calculator">
-        <div class="tops">
+        <div class="top">
            <span class="unit">deg</span>
            <section class="screen">
             <div class="input"></div>
@@ -18,9 +18,7 @@
          </section>
         </div>
          <div class="bottom">
-
              <section class="keys">
-
                 <div class="column">
                     <span data-key="7">7</span>
                     <span data-key="4">4</span>
@@ -42,7 +40,6 @@
                     <span class="equal-to" data-key="=">=</span>
                 </div>
              </section>
-
                 <section class="operators">
                     <span class="delete">>del</span>
                     <span data-key="/">/</span>
