--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
              </section>
                 <section class="operators">
-                    <span class="delete">>del</span>
+                    <span class="delete">del</span>
                     <span data-key="/">/</span>
                     <span data-key="x">x</span>
                     <span data-key="-">-</span>
